fault-tolerance/fault-tolerance-libs/src/test/java/com/mageddo/resilience4j/circuitbreaker/DpsCircuitBreakerWithManualHalfOpenTest.java
package com.mageddo.resilience4j.circuitbreaker;

import java.io.UncheckedIOException;
import java.time.Duration;

import com.mageddo.concurrency.Threads;
import com.mageddo.supporting.sandbox.Result;

import org.junit.jupiter.api.Test;

import static com.mageddo.resilience4j.circuitbreaker.DpsCircuitBreakerTest.keepTheNormalTransition;
import static com.mageddo.supporting.sandbox.resilience4j.Resilience4jCircuitBreakerSandBox.testCircuitOnError;
import static com.mageddo.supporting.sandbox.resilience4j.Resilience4jCircuitBreakerSandBox.testCircuitOnSuccess;
import io.github.resilience4j.circuitbreaker.CircuitBreaker;
import io.github.resilience4j.circuitbreaker.CircuitBreakerConfig;
import lombok.extern.slf4j.Slf4j;
import static org.junit.jupiter.api.Assertions.assertEquals;

@Slf4j
public class DpsCircuitBreakerWithManualHalfOpenTest {

  @Test
  void mustNotHalfOpenAutomatically() {

    // arrange
    final var circuit = dpsConfig();
    circuit.transitionToOpenState();

    Threads.sleep(1000);

    assertEquals(CircuitBreaker.State.OPEN, circuit.getState());
    testCircuitOnSuccess(Result.CIRCUIT_OPEN, CircuitBreaker.State.OPEN, circuit, 1);

  }

  @Test
  void serverGotUp() {

    // arrange
    final var circuit = dpsConfig();
    circuit.transitionToOpenState();
    circuit.transitionToHalfOpenState();

    // act // assert
    testCircuitOnSuccess(Result.SUCCESS, CircuitBreaker.State.HALF_OPEN, circuit, 8);
    testCircuitOnError(Result.ERROR, CircuitBreaker.State.HALF_OPEN, circuit, 1);
    testCircuitOnError(Result.ERROR, CircuitBreaker.State.CLOSED, circuit, 1);

  }


  static CircuitBreaker dpsConfig() {
    final var circuit = CircuitBreaker.of(
        "defaultCircuitBreaker",
        CircuitBreakerConfig
            .custom()

            .failureRateThreshold(21f)
            .minimumNumberOfCalls(100)

            .waitDurationInOpenState(Duration.ofDays(365))
            .recordExceptions(UncheckedIOException.class)

            .transitionOnResult(it -> {
              if(!it.isEmpty()) { // error
                log.info(
                    "empty={}, ex={}, it={}",
                    it.isEmpty(), it.getOrNull(), it
                );
              } else{
                log.info("left={}", it.getLeft());
              }
//              return CircuitBreakerConfig.TransitionCheckResult.transitionToOpen();
              return keepTheNormalTransition();
            })
            .build()
    );
    return circuit;
  }
}
